stylized ul in nav to fix overflow on smal screen

--- a/freeCodeCamp/HTML+CSS/Building_a_Quiz/styles.css
+++ b/freeCodeCamp/HTML+CSS/Building_a_Quiz/styles.css
@@ -32,7 +32,12 @@ h1, h2 {
 
 nav > ul  {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
+    align-items: center;
+    padding-inline-start: 0;
+    margin-block: 0;
+    height: 100%;
 }
 
 nav > ul > li {
